<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">clearing</string>
    <string name="bracket_close">)</string>
    <string name="division">/</string>
    <string name="multiplication">×</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="result">=</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="power">^</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="bracket_open">(</string>
    <string name="display">0</string>
    <string name="divider_horizontal">separates</string>
    <string name="cover_up">covering</string>
</resources>