<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="#000000"
        android:gravity="bottom"
        android:maxLines="4"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/display"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/clear"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/backspace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/backspace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center_horizontal|top"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/backspace"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/modulus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/modulus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/modulus"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backspace"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/division"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/division"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/modulus"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/seven"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/eight"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/backspace" />

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/nine"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/modulus" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/multiplication"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/division" />

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/four"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/five"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/six"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/subtraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/subtraction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/subtraction"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/multiplication" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/one"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/power"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/two"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/three"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintEnd_toStartOf="@+id/addition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/addition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/addition"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/subtraction" />

    <Button
        android:id="@+id/power"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="bottom|center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/power"
        android:textAlignment="gravity"
        android:textColor="#009688"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/zero"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/power"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center_horizontal|top"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/decimal"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_effectresult"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:onClick="input"
        android:text="@string/result"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decimal"
        app:layout_constraintTop_toBottomOf="@+id/addition" />

    <Button
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="13dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:srcCompat="@android:color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>